preparing WS4 dataset

--- a/pandas/add columns to dataset/add-columns-to-dataset.ipynb
+++ b/pandas/add columns to dataset/add-columns-to-dataset.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "74dc95e1",
+   "id": "a83f9259",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3325c453",
+   "id": "0353095e",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "3d08807f",
+   "id": "9801c94a",
    "metadata": {},
    "source": [
     "we want to have count of neutrons, so we must calculate subtraction between A, Z.\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0312d7d7",
+   "id": "029297b1",
    "metadata": {},
    "source": [
     "# Method 1"
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "642b7834",
+   "id": "50f6c4d2",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c2aba19a",
+   "id": "cdff599f",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72696997",
+   "id": "ae5c6193",
    "metadata": {},
    "source": [
     "# Method 2"
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e36f5388",
+   "id": "ca274954",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d651ec14",
+   "id": "11306336",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2038b92f",
+   "id": "461a92a9",
    "metadata": {},
    "source": [
     "# Method 3"
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "52ce4ede",
+   "id": "17871a1a",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "18602bfb",
+   "id": "8ea5ad40",
    "metadata": {},
    "outputs": [
     {
@@ -799,12 +799,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b21e9dd",
+   "cell_type": "raw",
+   "id": "da44e71c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "I hope this tutorial was useful to you :)"
+   ]
   }
  ],
  "metadata": {
