--- a/pandas/outlier detection/Outlier-detection.ipynb
+++ b/pandas/outlier detection/Outlier-detection.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "a9dfd7e7",
-   "metadata": {},
-   "source": [
-    "In this tutorial we want to detect outliers and for this task we will write a function."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "ce82e6dd",
@@ -25,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a1b6891e",
+   "id": "57c2452d",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ca65464",
+   "id": "028d3a97",
    "metadata": {},
    "source": [
     "# Detect outliers for one column:"
@@ -246,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "63c87377",
+   "id": "4d66b8b8",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a16fcf53",
+   "id": "146062e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "49315df4",
+   "id": "a020934e",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ca641679",
+   "id": "f67c1c14",
    "metadata": {
     "collapsed": true
    },
@@ -351,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "68112b47",
+   "id": "33256961",
    "metadata": {
     "collapsed": true
    },
@@ -387,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "fada5352",
+   "id": "36d3da58",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "8f7f5a97",
+   "id": "fdbadfc1",
    "metadata": {
     "collapsed": true
    },
@@ -798,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "56bfcf55",
+   "id": "3ec84eca",
    "metadata": {
     "collapsed": true
    },
@@ -830,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9397fe6",
+   "id": "56297af7",
    "metadata": {},
    "source": [
     "# Write a loop for replacing outliers with caps:"
@@ -839,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a2a537dc",
+   "id": "c0847edb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "17e37051",
+   "id": "d1ef7fb9",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "61e33873",
+   "id": "1047534d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,9 +893,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d789aafe",
+   "id": "4ed13169",
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1212,25 +1204,17 @@
     "    \n",
     "for i, col in enumerate(X.columns):\n",
     "    ax = axes_flat[i]\n",
-    "    ax.boxplot(df[col])\n",
+    "    ax.boxplot(X[col])\n",
     "    ax.set_title(col)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "694e4384",
+   "id": "60e6af1a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "fig, axes = plt.subplots(10, 3, figsize=(5,10))\n",
-    "axes_flat = axes.flatten()\n",
-    "    \n",
-    "for i, col in enumerate(X.columns):\n",
-    "    ax = axes_flat[i]\n",
-    "    ax.boxplot(df[col])\n",
-    "    ax.set_title(col)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
